force-app/main/default/objects/eNett_Contract__c/eNett_Contract__c.object-meta.xml
<CustomObject>
    <label>eNett Contract</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>eNett Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eNett Contract</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>