force-app/main/default/objects/eNett_Contract__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>IF(ISBLANK(Account_Name__r.BillingStreet), &quot;&quot;, Account_Name__r.BillingStreet &amp; &quot; &quot;) &amp;
IF(ISBLANK(Account_Name__r.BillingCity), &quot;&quot;, Account_Name__r.BillingCity &amp; &quot; &quot;) &amp;
IF(ISBLANK(Account_Name__r.BillingPostalCode), &quot;&quot;, Account_Name__r.BillingPostalCode &amp; &quot; &quot;) &amp;
IF(ISBLANK(Account_Name__r.BillingState), &quot;&quot;, Account_Name__r.BillingState &amp; &quot; &quot;) &amp;
IF(ISBLANK(Account_Name__r.BillingCountry), &quot;&quot;, Account_Name__r.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>