force-app/main/default/objects/eNett_Contract__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Added for use by Loop to distinguish between APAC-Australia and APAC-Other contracts. This is used to include the appropriate T&amp;C sections.</description>
    <formula>TEXT(Account_Name__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>