force-app/main/default/objects/eNett_Contract__c/fields/Account_ECN__c.field-meta.xml
<CustomField>
    <fullName>Account_ECN__c</fullName>
    <formula>Account_Name__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ECN</label>
    <type>Text</type>
</CustomField>