force-app/main/default/objects/eNett_Contract__c/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <formula>Account_Name__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Legal Name</label>
    <type>Text</type>
</CustomField>