force-app/main/default/objects/eNett_Contract__c/fields/Add_eNett_EFT__c.field-meta.xml
<CustomField>
    <fullName>Add_eNett_EFT__c</fullName>
    <formula>Account_Name__r.Add_eNett_EFT__c</formula>
    <label>Add eNett EFT</label>
    <type>Checkbox</type>
</CustomField>