force-app/main/default/objects/eNett_Contract__c/fields/APAC_Country__c.field-meta.xml
<CustomField>
    <fullName>APAC_Country__c</fullName>
    <formula>IF ( Account_Region__c = &quot;APAC&quot;, ( IF(Account_Country__c = &quot;Australia&quot;, &quot;Australia&quot;, &quot;Other&quot;) ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APAC Country</label>
    <type>Text</type>
</CustomField>