force-app/main/default/objects/eNett_Contract__c/fields/BPS__c.field-meta.xml
<CustomField>
    <fullName>BPS__c</fullName>
    <formula>Fixed_Amount__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an automatically calculated field converting the &quot;Fixed % Amount&quot; field to a BPS numeric number ( Fixed % Amount * 100)</inlineHelpText>
    <label>BPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>