force-app/main/default/objects/eNett_Contract__c/fields/Completed_Customer_Sign_off_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Customer_Sign_off_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the Customer Sign-off task</inlineHelpText>
    <label>Completed Customer Sign-off Task</label>
    <type>Date</type>
</CustomField>