force-app/main/default/objects/eNett_Contract__c/fields/Completed_Deal_Arrangement_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Deal_Arrangement_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the Deal Arrangement task</inlineHelpText>
    <label>Completed Deal Arrangement Task</label>
    <type>Date</type>
</CustomField>