force-app/main/default/objects/eNett_Contract__c/fields/Completed_eNett_Sign_off_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_eNett_Sign_off_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the eNett Sign-off task</inlineHelpText>
    <label>Completed eNett Sign-off Task</label>
    <type>Date</type>
</CustomField>