force-app/main/default/objects/eNett_Contract__c/fields/Completed_Finance_Approval_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Finance_Approval_Task__c</fullName>
    <label>Completed Finance Approval Task</label>
    <type>Date</type>
</CustomField>