force-app/main/default/objects/eNett_Contract__c/fields/Completed_Legal_Approval_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Legal_Approval_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the Legal Approval task</inlineHelpText>
    <label>Completed Legal Approval Task</label>
    <type>Date</type>
</CustomField>