force-app/main/default/objects/eNett_Contract__c/fields/Completed_Proposal_Neg_Signoff_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Proposal_Neg_Signoff_Task__c</fullName>
    <label>Completed Proposal Neg Signoff Task</label>
    <type>Date</type>
</CustomField>