force-app/main/default/objects/eNett_Contract__c/fields/Completed_Proposal_Negotiation_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Proposal_Negotiation_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the Proposal Negotiation task</inlineHelpText>
    <label>Completed Proposal Negotiation Task</label>
    <type>Date</type>
</CustomField>