force-app/main/default/objects/eNett_Contract__c/fields/Completed_Sales_Approval_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Sales_Approval_Task__c</fullName>
    <inlineHelpText>This date is automatically set on completion of the Sales Approval task</inlineHelpText>
    <label>Completed Sales Approval Task</label>
    <type>Date</type>
</CustomField>