force-app/main/default/objects/eNett_Contract__c/fields/Contact_Signed_by_eNett_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Signed_by_eNett_Date__c</fullName>
    <inlineHelpText>This field is automatically set.  It can be edited if required.
The field is set when the Custom Contract has been signed off by eNett (Legal).  It is assumed that only Accounts that have passed DD will be signed off by eNett.</inlineHelpText>
    <label>Custom Contract Signed by eNett Date</label>
    <type>Date</type>
</CustomField>