force-app/main/default/objects/eNett_Contract__c/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <formula>If(NOT(ISBLANK(Agreement_Term_Years__c)),(Contact_Signed_by_eNett_Date__c+((365)*Agreement_Term_Years__c)),Null)</formula>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>