force-app/main/default/objects/eNett_Contract__c/fields/Contract_Expiry_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Period__c</fullName>
    <label>Contract Expiry Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>