force-app/main/default/objects/eNett_Contract__c/fields/Contract_Signed_by_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_by_Customer_Date__c</fullName>
    <label>Contract Signed by Customer Date</label>
    <type>Date</type>
</CustomField>