force-app/main/default/objects/eNett_Contract__c/fields/Contract_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contract_Stage__c</fullName>
    <label>Contract Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. New</fullName>
                <default>true</default>
                <label>1. New</label>
            </value>
            <value>
                <fullName>2. Awaiting Approval by Sales</fullName>
            </value>
            <value>
                <fullName>3. Awaiting Approval by Finance</fullName>
            </value>
            <value>
                <fullName>4. Awaiting Approval by Legal</fullName>
            </value>
            <value>
                <fullName>5. Proposal / Negotiation / Signoff</fullName>
            </value>
            <value>
                <fullName>6. Awaiting eNett Signoff</fullName>
            </value>
            <value>
                <fullName>7. Contract Signed by eNett</fullName>
            </value>
            <value>
                <fullName>8. T&amp;C&#39;s Accepted</fullName>
            </value>
            <value>
                <fullName>9. Agreement not reached</fullName>
            </value>
            <value>
                <fullName>Contract Preparation</fullName>
            </value>
            <value>
                <fullName>Awaiting eNett Signoff</fullName>
            </value>
            <value>
                <fullName>Contract Signed by eNett</fullName>
            </value>
            <value>
                <fullName>Awaiting Contract Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>