force-app/main/default/objects/eNett_Contract__c/fields/Contract_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Reason__c</fullName>
    <label>Contract Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>