force-app/main/default/objects/eNett_Contract__c/fields/Country_Reference__c.field-meta.xml
<CustomField>
    <fullName>Country_Reference__c</fullName>
    <label>Country Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>