force-app/main/default/objects/eNett_Contract__c/fields/Cross_Currency_Details__c.field-meta.xml
<CustomField>
    <fullName>Cross_Currency_Details__c</fullName>
    <inlineHelpText>Please input the proposed cross currency fee here if you ticked the field above</inlineHelpText>
    <label>Cross Currency Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>