force-app/main/default/objects/eNett_Contract__c/fields/Cross_Currency_Fee_0_81__c.field-meta.xml
<CustomField>
    <fullName>Cross_Currency_Fee_0_81__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick this field if the cross currency fee you are proposing is less than 0.81%</inlineHelpText>
    <label>Cross Currency Fee &lt; 0.81%</label>
    <type>Checkbox</type>
</CustomField>