force-app/main/default/objects/eNett_Contract__c/fields/Deal_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>