force-app/main/default/objects/eNett_Contract__c/fields/Deal_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Deal_Term_Length__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Term Length</label>
    <type>Checkbox</type>
</CustomField>