force-app/main/default/objects/eNett_Contract__c/fields/Deal_Term_Length_Details__c.field-meta.xml
<CustomField>
    <fullName>Deal_Term_Length_Details__c</fullName>
    <inlineHelpText>Please enter details here</inlineHelpText>
    <label>Deal Term Length Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>