force-app/main/default/objects/eNett_Contract__c/fields/Deletion_of_Marketing_Clause__c.field-meta.xml
<CustomField>
    <fullName>Deletion_of_Marketing_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Deletion of Marketing Clause</label>
    <type>Checkbox</type>
</CustomField>