force-app/main/default/objects/eNett_Contract__c/fields/eNett_Contract_Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>eNett_Contract_Task_Outcome__c</fullName>
    <inlineHelpText>This field is automatically populated from the eNett Sign-off Task</inlineHelpText>
    <label>eNett Signoff Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eNett Sign-off Received</fullName>
            </value>
            <value>
                <fullName>eNett Sign-off Rejected</fullName>
            </value>
            <value>
                <fullName>N/A - Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>