force-app/main/default/objects/eNett_Contract__c/fields/eNett_Cross_Currency_Fee__c.field-meta.xml
<CustomField>
    <fullName>eNett_Cross_Currency_Fee__c</fullName>
    <label>eNett Cross Currency Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>