force-app/main/default/objects/eNett_Contract__c/fields/eNett_Product__c.field-meta.xml
<CustomField>
    <fullName>eNett_Product__c</fullName>
    <label>eNett Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>