force-app/main/default/objects/eNett_Contract__c/fields/eNett_signoff_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>eNett_signoff_Rejection_Reason__c</fullName>
    <label>eNett signoff Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>