force-app/main/default/objects/eNett_Contract__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <inlineHelpText>Please input the percentage of exclusivity here if you have chosen “yes – percentage” above</inlineHelpText>
    <label>Exclusivity %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>