force-app/main/default/objects/eNett_Contract__c/fields/Exclusivity_Clause__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Clause__c</fullName>
    <label>Exclusivity Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - All Cards</fullName>
            </value>
            <value>
                <fullName>Yes - Virtual Cards</fullName>
            </value>
            <value>
                <fullName>Yes - Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>