force-app/main/default/objects/eNett_Contract__c/fields/Extra_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Extra_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Incentive</label>
    <type>Checkbox</type>
</CustomField>