force-app/main/default/objects/eNett_Contract__c/fields/Extra_Incentive_Details__c.field-meta.xml
<CustomField>
    <fullName>Extra_Incentive_Details__c</fullName>
    <inlineHelpText>Please enter the details here</inlineHelpText>
    <label>Extra Incentive Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>