force-app/main/default/objects/eNett_Contract__c/fields/Finance_Approval_Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Task_Outcome__c</fullName>
    <label>Financel Approval Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Approved by Finance</fullName>
            </value>
            <value>
                <fullName>Deal Rejected by Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>