force-app/main/default/objects/eNett_Contract__c/fields/Finance_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finance_Rejection_Reason__c</fullName>
    <label>Finance Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>