force-app/main/default/objects/eNett_Contract__c/fields/First_Deal_Arrangement_Task__c.field-meta.xml
<CustomField>
    <fullName>First_Deal_Arrangement_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Deal Arrangement Task</label>
    <type>Checkbox</type>
</CustomField>