force-app/main/default/objects/eNett_Contract__c/fields/Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount__c</fullName>
    <inlineHelpText>Please input the fixed percentage share here (usually around 0.5)</inlineHelpText>
    <label>Fixed % Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>