force-app/main/default/objects/eNett_Contract__c/fields/GDV__c.field-meta.xml
<CustomField>
    <fullName>GDV__c</fullName>
    <formula>Opportunity_Name__r.Attainable_TTV_annual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>