force-app/main/default/objects/eNett_Contract__c/fields/Generate_Client_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Generate_Client_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Client Agreement</label>
    <type>Checkbox</type>
</CustomField>