force-app/main/default/objects/eNett_Contract__c/fields/Legal_Approval_Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_Task_Outcome__c</fullName>
    <inlineHelpText>This field is automatically populated from the Legal Approval Task</inlineHelpText>
    <label>Legal Approval Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Deal Rejected by Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>