force-app/main/default/objects/eNett_Contract__c/fields/Legal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Approved</label>
    <type>Checkbox</type>
</CustomField>