force-app/main/default/objects/eNett_Contract__c/fields/Legal_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Rejection_Reason__c</fullName>
    <inlineHelpText>This field is automatically populated from the Legal Approval Task</inlineHelpText>
    <label>Legal Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>