force-app/main/default/objects/eNett_Contract__c/fields/Marketing_Clause__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Clause</label>
    <type>Checkbox</type>
</CustomField>