force-app/main/default/objects/eNett_Contract__c/fields/Marketing_Clause_Details__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Clause_Details__c</fullName>
    <inlineHelpText>Please enter details here</inlineHelpText>
    <label>Marketing Clause Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>