force-app/main/default/objects/eNett_Contract__c/fields/Max_BPS__c.field-meta.xml
<CustomField>
    <fullName>Max_BPS__c</fullName>
    <formula>Max_Fixed_Share__c *100</formula>
    <label>Max BPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>