force-app/main/default/objects/eNett_Contract__c/fields/Number_Of_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Tiers__c</fullName>
    <description>Formula to calculate how many tiers a contract has.</description>
    <formula>IF ( NOT(ISPICKVAL(Rebate_Type__c, &quot;Tiered&quot;)), 0,
 IF( OR( Tier_5_Int_Range_From__c &gt; 0 , Tier_5_Fixed_Range_From__c &gt; 0 ) , 5, 
  IF( OR( Tier_4_Int_Range_From__c &gt; 0 , Tier_4_Fixed_Range_From__c &gt; 0 ) , 4, 
   IF( OR( Tier_3_Int_Range_From__c &gt; 0 , Tier_3_Fixed_Range_From__c &gt; 0 ) , 3, 
    IF ( OR( Tier_2_Int_Range_From__c &gt; 0 , Tier_2_Fixed_Range_From__c &gt; 0 ) , 2, 1
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Tiers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>