force-app/main/default/objects/eNett_Contract__c/fields/Opp_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opp_Currency__c</fullName>
    <formula>TEXT(Opportunity_Name__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Currency</label>
    <type>Text</type>
</CustomField>