force-app/main/default/objects/eNett_Contract__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>eNett Contract</relationshipLabel>
    <relationshipName>eNett_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>