force-app/main/default/objects/eNett_Contract__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <inlineHelpText>Please enter details here</inlineHelpText>
    <label>Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>