force-app/main/default/objects/eNett_Contract__c/fields/Path_To_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Path_To_T_Cs__c</fullName>
    <description>Contains the path to the version of the T&amp;Cs relevant to this contract.</description>
    <label>Path To T&amp;Cs</label>
    <type>Url</type>
</CustomField>