force-app/main/default/objects/eNett_Contract__c/fields/Proposal_Neg_Signoff_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Neg_Signoff_Further_Details__c</fullName>
    <label>Proposal/Neg/Signoff Further Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>