force-app/main/default/objects/eNett_Contract__c/fields/Proposal_Neg_Signoff_Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Neg_Signoff_Task_Outcome__c</fullName>
    <label>Proposal Neg. Signoff Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modifications Made</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>