force-app/main/default/objects/eNett_Contract__c/fields/Proposal_Negotiation_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Negotiation_Further_Details__c</fullName>
    <inlineHelpText>This field is automatically populated from the Proposal / Negotiation Task</inlineHelpText>
    <label>Proposal/Negotiation Further Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>