force-app/main/default/objects/eNett_Contract__c/fields/Proposal_Negotiation_Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Negotiation_Task_Outcome__c</fullName>
    <inlineHelpText>This field is automatically populated from the Proposal / Negotiation Task</inlineHelpText>
    <label>Proposal Negotiation Task Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modifications Made</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>