force-app/main/default/objects/eNett_Contract__c/fields/Region_Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>Region_Product_Reference__c</fullName>
    <formula>IF(ISPICKVAL(Account_Name__r.Country__c, &#39;Australia&#39;) || ISPICKVAL(Account_Name__r.Country__c, &#39;New Zealand&#39;), TEXT(Account_Name__r.Country__c), TEXT(Account_Name__r.Region__c)) + TEXT(eNett_Product__c)</formula>
    <label>Region Product Reference</label>
    <type>Text</type>
</CustomField>