force-app/main/default/objects/eNett_Contract__c/fields/Region_Reference__c.field-meta.xml
<CustomField>
    <fullName>Region_Reference__c</fullName>
    <label>Region Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>