force-app/main/default/objects/eNett_Contract__c/fields/Review_Period_Months_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Review_Period_Months_if_applicable__c</fullName>
    <inlineHelpText>Entering a value greater than &quot;0&quot; in this field will set the T&amp;C Modification checkbox and redirect the Contract for Regional Sales and Legal Approval.</inlineHelpText>
    <label>Review Period (Months - if applicable)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>