force-app/main/default/objects/eNett_Contract__c/fields/Sales_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Approved</label>
    <type>Checkbox</type>
</CustomField>