force-app/main/default/objects/eNett_Contract__c/fields/SLA_Required__c.field-meta.xml
<CustomField>
    <fullName>SLA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if SLA is required.</inlineHelpText>
    <label>SLA Required</label>
    <type>Checkbox</type>
</CustomField>